--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </section>
 
     <section id="additional-content">
-        <h2>About Me</h2>
-        <p>I am a passionate senior developer with expertise in various technologies. I enjoy building scalable and user-friendly applications that solve real-world problems.</p>
+<!--        <h2>About Me</h2>-->
+<!--        <p>I am a passionate senior developer with expertise in various technologies. I enjoy building scalable and user-friendly applications that solve real-world problems.</p>-->
         <div class="image-container">
             <img class="content-image" src="resources/bg.png" alt="Description of your image">
         </div>
