--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
 <nav id="navbar">
+
     <div class="container">
-        <a href="#" class="logo">Cole Leavitt</a>
+        <div>
+            <span style="color:#ffffff;font-weight:700;">Cole</span>
+            <span style="color:#dd68ff;font-weight:700;">Leavitt</span>
+        </div>
         <ul class="nav-links">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
@@ -17,12 +21,12 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </div>
+
 </nav>
 <main>
     <section id="about">
         <h1>Welcome to My Personal Website</h1>
-        <p>I am a developer and cyber-security enthusiast. Check out my work on <a
-                href="https://github.com/ExploitDemon" target="_blank">GitHub</a>.</p>
+        <p>I am a developer and cyber-security enthusiast. Check out my work on <a href="https://github.com/ExploitDemon" target="_blank" class="github-link"></a></p>
     </section>
 
     <section id="additional-content">
