--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,36 +7,32 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<nav id="navbar">
-
-    <div class="container">
-        <div>
-            <span style="color:#ffffff;font-weight:700;">Cole</span>
-            <span style="color:#dd68ff;font-weight:700;">Leavitt</span>
+<header>
+    <nav id="navbar">
+        <div class="container">
+            <div>
+                <span id="cole">Cole</span>
+                <span id="leavitt">Leavitt</span>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
         </div>
-        <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </div>
-
-</nav>
+    </nav>
+</header>
 <main>
     <section id="about">
         <h1>Welcome to My Personal Website</h1>
         <p>I am a developer and cyber-security enthusiast. Check out my work on <a href="https://github.com/ExploitDemon" target="_blank" class="github-link"></a></p>
     </section>
-
     <section id="additional-content">
-<!--        <h2>About Me</h2>-->
-<!--        <p>I am a passionate senior developer with expertise in various technologies. I enjoy building scalable and user-friendly applications that solve real-world problems.</p>-->
         <div class="image-container">
-            <img class="content-image" src="resources/bg.png" alt="Description of your image">
+            <img class="content-image" src="resources/bg.png" alt="Background image">
         </div>
     </section>
-
 </main>
 <footer>
     <p>&copy; 2023 Cole Leavitt</p>
